clear wave error, fix contrast problem

--- a/style.css
+++ b/style.css
@@ -340,6 +340,11 @@ a:hover {
     border: #364577 dashed 2px;
     border-radius: 20px;
 }
+button:focus {
+    background: transparent !important;
+    border: #364577 dashed 2px !important;
+    border-radius: 20px;
+}
 
 .navbar-toggle {
     margin: 10px 10px 0 0;
@@ -783,18 +788,23 @@ h4 {
 }
 
 .tc-white {
+    color: #FFFFFF!important;
+}
+.tc-orange {
     color: #F3976C!important;
 }
-
+.tc-black {
+    color: #111111 !important;
+}
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #111111!important;
 }
 
 .btn-atomic-tangerine:hover,
 .btn-atomic-tangerine:focus {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #111111!important;
 }
 
 .ltc-white {
